New layout for links in link comment view

--- a/app/src/main/res/drawable/thread_comment_bg.xml
+++ b/app/src/main/res/drawable/thread_comment_bg.xml
@@ -7,7 +7,7 @@
     </shape>
   </item>
 
-  <item android:top="1dp" >
+  <item android:top="@dimen/comment_top_border_width">
     <shape>
       <solid android:color="#ffffff" />
     </shape>
