--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,17 +15,15 @@
   <dimen name="navigation_drawer_item_text">18sp</dimen>
   <dimen name="navigation_drawer_icon_margin">16dp</dimen>
   <dimen name="comment_indentation_margin">8dp</dimen>
-  <dimen name="comment_expander_size">12dp</dimen> <!-- 12dp -->
+  <dimen name="comment_top_border_width">1dp</dimen>
   <dimen name="comment_author_text_size">16sp</dimen>
   <dimen name="comment_secondary_data_text_size">14sp</dimen>
   <dimen name="comment_score_text_size">@dimen/comment_secondary_data_text_size</dimen>
   <dimen name="comment_timestamp_text_size">@dimen/comment_secondary_data_text_size</dimen>
   <dimen name="comment_body_text_size">16sp</dimen>
   <dimen name="comment_more_text_size">12sp</dimen>
-  <dimen name="comment_author_margin">0dp</dimen> <!-- 5dp -->
-  <dimen name="comment_score_margin">0dp</dimen> <!-- 5dp -->
   <dimen name="comment_expander_margin_horizontal">@dimen/comment_data_margin_horizontal</dimen>
-  <dimen name="comment_data_margin_horizontal">8dp</dimen> <!-- 5dp -->
+  <dimen name="comment_data_margin_horizontal">8dp</dimen>
   <dimen name="toolbar_elevation">6dp</dimen>
   <dimen name="link_self_text_padding">8dp</dimen>
   <dimen name="link_list_item_margin_vertical">8dp</dimen>
