--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -43,14 +43,14 @@
             android:id="@+id/link_nsfw_indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/link_metadata_margin"
+            android:layout_marginRight="@dimen/link_metadata_margin"
             android:background="@drawable/nsfw_tag_bg"
             android:text="@string/nsfw"
             android:textSize="@dimen/link_metadata_text_size"
             android:textColor="@color/nsfw_tag_color"/>
 
         <TextView
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
             android:id="@+id/link_gilded_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -71,7 +71,7 @@
             android:fontFamily="sans-serif-light"
             android:textSize="@dimen/link_metadata_text_size"
             android:textColor="@color/secondary_text"
-            android:gravity="center_vertical|end"
+            android:gravity="end"
             tools:text="imgur.com"
             tools:targetApi="16"/>
 
