--- a/app/src/main/res/layout/link_comments_link.xml
+++ b/app/src/main/res/layout/link_comments_link.xml
@@ -124,12 +124,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+      <!--android:maxHeight="@dimen/link_image_full_size"-->
       <ImageView
           android:id="@+id/link_thumbnail"
-          android:layout_width="wrap_content"
+          android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
-          android:maxHeight="@dimen/link_image_full_size"
           android:layout_marginTop="8dp"
           android:src="@drawable/ic_thumbnail_placeholder"/>
 
