--- a/app/src/main/res/layout/fragment_markdown_text.xml
+++ b/app/src/main/res/layout/fragment_markdown_text.xml
@@ -11,6 +11,7 @@
     android:id="@+id/markdown_text_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="@dimen/about_app_text_size"/>
+    android:textSize="@dimen/about_app_text_size"
+    android:textColorLink="@color/link_color"/>
 
 </ScrollView>
