--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,5 +28,6 @@
   <color name="markdown_quote_block">@color/primary_light</color>
   <color name="comment_controversiality_indicator">#FF5252</color>
   <color name="nsfw_tag_color">#d10023</color>
+  <color name="link_color">#0000ee</color>
 
 </resources>
