--- a/app/src/main/res/layout/link_comments_link.xml
+++ b/app/src/main/res/layout/link_comments_link.xml
@@ -145,6 +145,7 @@
         android:gravity="start"
         android:textAlignment="viewStart"
         android:textColor="@color/primary_text"
+        android:textColorLink="@color/link_color"
         android:bufferType="spannable"
         tools:text="Lorem ipsum dolor sit amet"
         tools:ignore="UnusedAttribute"/>
