Fixed text size for link self text

--- a/app/src/main/res/layout/link_comments_link.xml
+++ b/app/src/main/res/layout/link_comments_link.xml
@@ -144,6 +144,7 @@
         android:paddingRight="@dimen/link_list_item_margin_horizontal"
         android:gravity="start"
         android:textAlignment="viewStart"
+        android:textSize="@dimen/link_self_text_size"
         android:textColor="@color/primary_text"
         android:textColorLink="@color/link_color"
         android:bufferType="spannable"
