--- a/app/src/main/res/layout/navigate_to_subreddit_edit_text.xml
+++ b/app/src/main/res/layout/navigate_to_subreddit_edit_text.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/navigation_drawer_item"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/navigation_drawer_item_height"
-        android:orientation="horizontal"
-        android:paddingLeft="@dimen/navigation_drawer_item_margin"
-        android:paddingRight="@dimen/navigation_drawer_item_margin">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation_drawer_item"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/navigation_drawer_item_height"
+    android:orientation="horizontal"
+    android:paddingLeft="@dimen/navigation_drawer_item_margin"
+    android:paddingRight="@dimen/navigation_drawer_item_margin">
 
   <com.ddiehl.android.htn.view.widgets.RedditNavEditText
-    android:id="@+id/drawer_navigate_to_subreddit_text"
-    android:layout_width="@dimen/navigation_drawer_width"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical"
-    android:textAlignment="viewStart"
-    android:gravity="start"
-    android:textColor="@color/primary_text"
-    android:textSize="@dimen/navigation_drawer_item_text"
-    android:textColorHint="@color/secondary_text"
-    android:hint="@string/drawer_navigate_to_subreddit"
-    android:imeOptions="actionDone"
-    android:inputType="text"
-    android:singleLine="true"
-    android:background="@null"/>
+      android:id="@+id/drawer_navigate_to_subreddit_text"
+      android:layout_width="@dimen/navigation_drawer_width"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_vertical"
+      android:textAlignment="viewStart"
+      android:gravity="start"
+      android:textColor="@color/primary_text"
+      android:textSize="@dimen/navigation_drawer_item_text"
+      android:textColorHint="@color/secondary_text"
+      android:hint="@string/drawer_navigate_to_subreddit"
+      android:imeOptions="actionDone"
+      android:inputType="text"
+      android:singleLine="true"
+      android:background="@null"
+      tools:ignore="UnusedAttribute"/>
 
   <ImageView
-    android:id="@+id/drawer_navigate_to_subreddit_go"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical"
-    android:color="@color/accent"
-    android:src="@drawable/ic_navigation_go"
-    android:autoMirrored="true" />
+      android:id="@+id/drawer_navigate_to_subreddit_go"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_vertical"
+      android:color="@color/accent"
+      android:src="@drawable/ic_navigation_go"
+      android:autoMirrored="true"
+      tools:ignore="UnusedAttribute"/>
 
 </LinearLayout>
