--- a/app/src/main/res/menu/links_menu.xml
+++ b/app/src/main/res/menu/links_menu.xml
@@ -1,28 +1,29 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <item
-    android:id="@+id/action_refresh"
-    android:title="@string/action_refresh"
-    android:icon="@drawable/ic_action_refresh"
-    app:showAsAction="ifRoom" />
+      android:id="@+id/action_refresh"
+      android:title="@string/action_refresh"
+      android:icon="@drawable/ic_action_refresh"
+      app:showAsAction="ifRoom" />
 
   <item
-    android:id="@+id/action_change_sort"
-    android:title="@string/action_sort"
-    android:icon="@drawable/ic_change_sort"
-    app:showAsAction="ifRoom" />
+      android:id="@+id/action_change_sort"
+      android:title="@string/action_sort"
+      android:icon="@drawable/ic_change_sort"
+      app:showAsAction="ifRoom" />
 
   <item
-    android:id="@+id/action_change_timespan"
-    android:title="@string/action_timespan"
-    android:icon="@drawable/ic_change_timespan"
-    app:showAsAction="ifRoom" />
+      android:id="@+id/action_change_timespan"
+      android:title="@string/action_timespan"
+      android:icon="@drawable/ic_change_timespan"
+      app:showAsAction="ifRoom" />
 
   <item
-    android:id="@+id/action_settings"
-    android:title="@string/action_settings"
-    app:showAsAction="never"/>
+      android:id="@+id/action_settings"
+      android:title="@string/action_settings"
+      app:showAsAction="never"/>
 
 </menu>
