--- a/app/src/main/res/xml/preferences_all.xml
+++ b/app/src/main/res/xml/preferences_all.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android">
   <!-- Show these to all users -->
   <!-- Ensure any preferences here get synced with preferences_user.xml -->
   <PreferenceCategory
@@ -16,15 +16,9 @@
       android:title="@string/pref_use_custom_tabs"
       android:defaultValue="true"/>
 
-    <!--<CheckBoxPreference
-      android:key="pref_enable_ads"
-      android:title="@string/pref_enable_ads"
-      android:defaultValue="false"/>-->
-
     <Preference
       android:key="pref_about_app"
       android:title="@string/pref_about_app"/>
 
   </PreferenceCategory>
-
 </PreferenceScreen>
