--- a/app/src/main/res/xml/preferences_user.xml
+++ b/app/src/main/res/xml/preferences_user.xml
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-
-<!--  <ListPreference
-    android:key="lang"
-    android:title="@string/pref_lang"
-    android:summary="@string/pref_lang_summary"/>-->
-
-<!--  <CheckBoxPreference
-    android:key="newwindow"
-    android:title="@string/pref_newwindow"/>-->
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
   <PreferenceCategory
     android:title="media">
@@ -26,22 +18,6 @@
 
   <PreferenceCategory
     android:title="link options">
-
-<!--    <CheckBoxPreference
-      android:key="organic"
-      android:title="@string/pref_organic"/>--> <!-- show spotlight box on front page -->
-
-<!--    <CheckBoxPreference
-      android:key="show_trending"
-      android:title="@string/pref_show_trending"/>-->
-
-<!--    <CheckBoxPreference
-      android:key="clickgadget"
-      android:title="@string/pref_clickgadget"/>-->
-
-<!--    <CheckBoxPreference
-      android:key="compress"
-      android:title="@string/pref_compress"/>-->
 
     <CheckBoxPreference
       android:key="domain_details"
@@ -86,10 +62,6 @@
       android:entryValues="@array/comment_sort_option_values"
       android:defaultValue="@string/default_comment_sort"
       android:summary="%s" />
-
-<!--    <CheckBoxPreference
-      android:key="ignore_suggested_sort"
-      android:title="@string/pref_ignore_suggested_sort"/>-->
 
     <CheckBoxPreference
       android:key="highlight_controversial"
@@ -141,10 +113,6 @@
   <PreferenceCategory
     android:title="display options">
 
-<!--    <CheckBoxPreference
-      android:key="enable_default_themes"
-      android:title="@string/pref_enable_default_themes"/>--> <!-- allow subreddits to show me custom themes -->
-
     <CheckBoxPreference
       android:key="show_flair"
       android:title="@string/pref_show_flair"
@@ -181,10 +149,6 @@
       android:defaultValue="true"
       android:dependency="no_profanity"/>
 
-<!--    <CheckBoxPreference
-      android:key="private_feeds"
-      android:title="@string/pref_private_feeds"/>-->
-
   </PreferenceCategory>
 
   <PreferenceCategory
@@ -211,24 +175,5 @@
     android:key="beta"
     android:title="@string/pref_beta"
     android:defaultValue="false"/>
-
-  <!--
-    <CheckBoxPreference
-      android:key="email_messages"/>
-
-    <CheckBoxPreference
-      android:key="hide_locationbar"/>
-
-    <CheckBoxPreference
-      android:key="show_promote"/>
-
-    <CheckBoxPreference
-      android:key="show_stylesheets"/>
-
-    <EditTextPreference
-      android:key="theme_selector"/>
-
-    <CheckBoxPreference
-      android:key="use_global_defaults"/>-->
 
 </PreferenceScreen>
