Refactored display of trophies into GridLayout

--- a/app/src/main/res/layout/trophy_layout.xml
+++ b/app/src/main/res/layout/trophy_layout.xml
@@ -2,9 +2,9 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="0dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_weight="1">
+    android:layout_margin="8dp">
 
   <ImageView
       android:id="@+id/trophy_icon"
@@ -14,11 +14,10 @@
 
   <TextView
       android:id="@+id/trophy_name"
-      android:layout_width="match_parent"
+      android:layout_width="@dimen/user_trophy_name_text_width"
       android:layout_height="wrap_content"
-      android:textSize="@dimen/user_trophy_name_text_size"
-      android:textColor="@color/secondary_text"
       android:gravity="center"
-      android:layout_gravity="center"/>
+      android:textSize="@dimen/user_trophy_name_text_size"
+      android:textColor="@color/secondary_text"/>
 
 </LinearLayout>
