--- a/app/src/main/res/menu/listings_inbox.xml
+++ b/app/src/main/res/menu/listings_inbox.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -7,6 +6,11 @@
       android:id="@+id/action_refresh"
       android:title="@string/action_refresh"
       android:icon="@drawable/ic_action_refresh"
+      app:showAsAction="ifRoom" />
+
+  <item
+      android:id="@+id/action_mark_messages_read"
+      android:title="@string/action_mark_messages_read"
       app:showAsAction="ifRoom" />
 
   <item
