Implemented option to mark individual messages read

--- a/app/src/main/res/menu/message_context.xml
+++ b/app/src/main/res/menu/message_context.xml
@@ -10,6 +10,12 @@
       app:showAsAction="never"/>
 
   <item
+      android:id="@+id/action_message_mark_read"
+      android:title="@string/action_mark_message_read"
+      android:icon="@null"
+      app:showAsAction="never"/>
+
+  <item
       android:id="@+id/action_message_mark_unread"
       android:title="@string/action_mark_message_unread"
       android:icon="@null"
