--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/primary_light">
+    android:layout_height="match_parent">
 
   <android.support.v4.widget.DrawerLayout
       android:id="@+id/drawer_layout"
