--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -8,22 +8,22 @@
     card_view:cardElevation="@dimen/link_card_elevation"
     card_view:cardUseCompatPadding="true">
 
-  <!-- Reminder - changes here should be reflected in link_comments_link.xml -->
   <LinearLayout
-      android:id="@+id/link_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/listings_card_bg"
       android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/link_view"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/link_list_item_margin_vertical"
         android:paddingBottom="@dimen/link_list_item_margin_vertical"
         android:paddingLeft="@dimen/link_list_item_margin_horizontal"
         android:paddingRight="@dimen/link_list_item_margin_horizontal"
-        android:orientation="vertical">
+        android:background="@android:color/white">
 
       <TextView
           android:id="@+id/link_title"
