--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,8 @@
     <item name="android:windowNoTitle">true</item>
     <item name="windowActionBar">false</item> <!-- For 2.x version -->
     <item name="android:windowActionModeOverlay">true</item>
+    <!-- app background color -->
+    <item name="android:windowBackground">@color/primary_light</item>
   </style>
 
   <style name="ToolbarThemeLightText" parent="AppTheme">
