--- a/app/src/main/res/layout/listings_message.xml
+++ b/app/src/main/res/layout/listings_message.xml
@@ -3,10 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/link_card_margin"
-    android:layout_marginBottom="@dimen/link_card_margin"
     card_view:cardElevation="@dimen/link_card_elevation"
-    card_view:cardCornerRadius="@dimen/link_card_corner_radius"
     card_view:cardUseCompatPadding="true">
 
   <LinearLayout
@@ -14,8 +11,7 @@
       android:id="@+id/item_row"
       android:orientation="vertical"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:background="@drawable/listings_card_bg">
+      android:layout_height="wrap_content">
 
     <include layout="@layout/message_layout"/>
 
