--- a/app/src/main/res/layout/link_comments_link.xml
+++ b/app/src/main/res/layout/link_comments_link.xml
@@ -1,5 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Reminder - changes here should be reflected in listings_link.xml -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,17 +9,17 @@
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:paddingBottom="@dimen/link_list_item_margin_vertical"
-      android:paddingTop="@dimen/link_list_item_margin_vertical"
-      android:background="@android:color/white"
+      android:paddingBottom="@dimen/baseline_spacing"
+      android:paddingTop="@dimen/baseline_spacing"
+      android:background="@color/white"
       android:orientation="vertical">
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/link_list_item_margin_horizontal"
-        android:paddingRight="@dimen/link_list_item_margin_horizontal"
-        android:orientation="vertical">
+        android:paddingLeft="@dimen/baseline_spacing"
+        android:paddingRight="@dimen/baseline_spacing">
 
       <TextView
           android:id="@+id/link_title"
@@ -30,96 +28,104 @@
           android:textAlignment="viewStart"
           android:layout_gravity="start"
           android:fontFamily="sans-serif-light"
-          android:textSize="@dimen/link_title_text_size"
+          android:textAppearance="?android:textAppearanceLarge"
           android:textColor="@color/primary_text"
           tools:text="The quick brown fox jumped over the white fence"
           tools:ignore="UnusedAttribute"/>
 
       <LinearLayout
+          android:id="@+id/link_metadata"
+          android:orientation="vertical"
           android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:gravity="center_vertical"
-          android:orientation="horizontal">
+          android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/link_nsfw_indicator"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/link_metadata_margin"
-            android:layout_marginRight="@dimen/link_metadata_margin"
-            android:background="@drawable/nsfw_tag_bg"
-            android:text="@string/nsfw"
-            android:textSize="@dimen/link_metadata_text_size"
-            android:textColor="@color/nsfw_tag_color"/>
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-        <!--android:fontFamily="sans-serif-light"-->
-        <TextView
-            android:id="@+id/link_gilded_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:drawableStart="@drawable/ic_gilded_2"
-            android:drawableLeft="@drawable/ic_gilded_2"
-            android:textSize="@dimen/link_metadata_text_size"
-            android:textColor="@color/secondary_text"
-            tools:targetApi="16"
-            tools:text="× 2"/>
+          <TextView
+              android:id="@+id/link_nsfw_indicator"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginEnd="@dimen/link_metadata_margin"
+              android:layout_marginRight="@dimen/link_metadata_margin"
+              android:background="@drawable/nsfw_tag_bg"
+              android:text="@string/nsfw"
+              android:textSize="@dimen/link_metadata_text_size"
+              android:textColor="@color/nsfw_tag_color"/>
 
-        <TextView
-            android:id="@+id/link_domain"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:textSize="@dimen/link_metadata_text_size"
-            android:textColor="@color/secondary_text"
-            tools:text="imgur.com"/>
+          <!--android:fontFamily="sans-serif-light"-->
+          <TextView
+              android:id="@+id/link_gilded_text_view"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:gravity="center"
+              android:drawableStart="@drawable/ic_gilded_2"
+              android:drawableLeft="@drawable/ic_gilded_2"
+              android:textSize="@dimen/link_metadata_text_size"
+              android:textColor="@color/secondary_text"
+              tools:targetApi="16"
+              tools:text="× 2"/>
+
+          <TextView
+              android:id="@+id/link_domain"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              android:layout_weight="1"
+              android:gravity="end"
+              android:textSize="@dimen/link_metadata_text_size"
+              android:textColor="@color/secondary_text"
+              tools:text="imgur.com"/>
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+          <TextView
+              android:id="@+id/link_score"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              style="@style/LinkMetadataTextViewLight"
+              tools:text="573 points"/>
+
+          <com.ddiehl.timesincetextview.TimeSinceTextView
+              android:id="@+id/link_timestamp"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_alignParentRight="true"
+              android:layout_alignParentEnd="true"
+              style="@style/LinkMetadataTextViewLight"
+              tools:text="2 days ago"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+          <TextView
+              android:id="@+id/link_author"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              tools:text="/u/andrewsmith1984"
+              style="@style/LinkMetadataTextViewLight"/>
+
+          <TextView
+              android:id="@+id/link_subreddit"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_alignParentEnd="true"
+              android:layout_alignParentRight="true"
+              tools:text="/r/AskReddit"
+              style="@style/LinkMetadataTextViewLight"/>
+
+        </RelativeLayout>
 
       </LinearLayout>
-
-      <RelativeLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/link_score"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/LinkMetadataTextViewLight"
-            tools:text="573 points"/>
-
-        <com.ddiehl.timesincetextview.TimeSinceTextView
-            android:id="@+id/link_timestamp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            style="@style/LinkMetadataTextViewLight"
-            tools:text="2 days ago"/>
-
-      </RelativeLayout>
-
-      <RelativeLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/link_author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="/u/andrewsmith1984"
-            style="@style/LinkMetadataTextViewLight"/>
-
-        <TextView
-            android:id="@+id/link_subreddit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            tools:text="/r/AskReddit"
-            style="@style/LinkMetadataTextViewLight"/>
-
-      </RelativeLayout>
 
     </LinearLayout>
 
@@ -142,9 +148,9 @@
         android:id="@+id/link_self_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/link_list_item_margin_vertical"
-        android:paddingLeft="@dimen/link_list_item_margin_horizontal"
-        android:paddingRight="@dimen/link_list_item_margin_horizontal"
+        android:layout_marginTop="@dimen/baseline_spacing"
+        android:paddingLeft="@dimen/baseline_spacing"
+        android:paddingRight="@dimen/baseline_spacing"
         android:gravity="start"
         android:textAlignment="viewStart"
         android:textSize="@dimen/link_self_text_size"
@@ -166,8 +172,8 @@
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_gravity="start"
-          android:paddingLeft="@dimen/link_list_item_margin_horizontal"
-          android:paddingRight="@dimen/link_list_item_margin_horizontal"
+          android:paddingLeft="@dimen/baseline_spacing"
+          android:paddingRight="@dimen/baseline_spacing"
           tools:text="1993 comments"
           style="@style/LinkMetadataTextViewLight"/>
 
