--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -11,7 +11,6 @@
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="@drawable/listings_card_bg"
       android:orientation="vertical">
 
     <LinearLayout
@@ -19,11 +18,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/link_list_item_margin_vertical"
-        android:paddingBottom="@dimen/link_list_item_margin_vertical"
-        android:paddingLeft="@dimen/link_list_item_margin_horizontal"
-        android:paddingRight="@dimen/link_list_item_margin_horizontal"
-        android:background="@android:color/white">
+        android:padding="@dimen/baseline_spacing">
 
       <TextView
           android:id="@+id/link_title"
@@ -32,7 +27,7 @@
           android:textAlignment="viewStart"
           android:layout_gravity="start"
           android:fontFamily="sans-serif-light"
-          android:textSize="@dimen/link_title_text_size"
+          android:textAppearance="?android:textAppearanceLarge"
           android:textColor="@color/primary_text"
           tools:text="The brown fox jumped over the white fence"
           tools:ignore="UnusedAttribute"/>
@@ -50,7 +45,7 @@
             android:layout_marginRight="@dimen/link_metadata_margin"
             android:background="@drawable/nsfw_tag_bg"
             android:text="@string/nsfw"
-            android:textSize="@dimen/link_metadata_text_size"
+            android:textAppearance="?android:textAppearanceSmall"
             android:textColor="@color/nsfw_tag_color"/>
 
         <TextView
@@ -58,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
-            android:textSize="@dimen/link_metadata_text_size"
+            android:textAppearance="?android:textAppearanceSmall"
             android:textColor="@color/secondary_text"
             android:gravity="center"
             android:drawableStart="@drawable/ic_gilded_2"
@@ -72,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="sans-serif-light"
-            android:textSize="@dimen/link_metadata_text_size"
+            android:textAppearance="?android:textAppearanceSmall"
             android:textColor="@color/secondary_text"
             android:gravity="end"
             tools:text="imgur.com"
@@ -83,12 +78,10 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/link_metadata"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/link_list_item_margin_vertical"
-        android:paddingBottom="@dimen/link_list_item_margin_vertical"
-        android:paddingLeft="@dimen/link_list_item_margin_horizontal"
-        android:paddingRight="@dimen/link_list_item_margin_horizontal"
+        android:padding="@dimen/baseline_spacing"
         android:background="@color/primary_dark"
         android:orientation="horizontal">
 
@@ -196,13 +189,14 @@
         android:id="@+id/link_self_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceSmall"
         android:textAlignment="viewStart"
         android:gravity="start"
         android:textColor="@color/primary_text"
         android:textColorLink="@color/link_color"
         android:padding="@dimen/link_self_text_padding"
         android:bufferType="spannable"
-        android:background="@android:color/white"
+        android:background="@color/white"
         tools:text="Lorem ipsum dolor sit amet"
         tools:ignore="UnusedAttribute"/>
 
