--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,12 +11,16 @@
   <color name="icons">#FFFFFF</color>
   <color name="divider">#B6B6B6</color>
 
+  <color name="white">#ffffffff</color>
+  <color name="black">#ff000000</color>
   <color name="transparent">#00000000</color>
   <color name="indentation">@color/primary</color>
   <color name="reddit_orange">#60FF8B60</color>
-  <color name="reddit_orange_full">#FFFF8B60</color>
+  <color name="reddit_orange_full">#FF8B60</color>
+  <color name="reddit_orange_lighter">#FFCBB8</color>
   <color name="reddit_blue">#609494FF</color>
-  <color name="reddit_blue_full">#FF9494FF</color>
+  <color name="reddit_blue_full">#9494FF</color>
+  <color name="reddit_blue_lighter">#C9C9FF</color>
   <color name="reddit_gold">#f6e600</color>
   <color name="author_op_background">#0055DF</color>
   <color name="author_op_text">#ffffff</color>
