--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,7 +27,7 @@
   <dimen name="comment_data_margin_horizontal">8dp</dimen>
   <dimen name="toolbar_elevation">6dp</dimen>
   <dimen name="link_self_text_size">16sp</dimen>
-  <dimen name="link_self_text_padding">8dp</dimen>
+  <dimen name="link_self_text_padding">@dimen/baseline_spacing</dimen>
   <dimen name="link_list_item_margin_vertical">8dp</dimen>
   <dimen name="link_list_item_margin_horizontal">8dp</dimen>
   <dimen name="link_card_margin">0dp</dimen>
