--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,13 +21,13 @@
   </style>
 
   <style name="LinkMetadataTextViewLight">
-    <item name="android:textSize">@dimen/link_metadata_text_size</item>
+    <item name="android:textAppearance">?android:textAppearanceSmall</item>
     <item name="android:textColor">@color/secondary_text</item>
   </style>
 
   <style name="LinkMetadataTextViewDark">
-    <item name="android:textSize">@dimen/link_metadata_text_size</item>
-    <item name="android:textColor">@android:color/white</item>
+    <item name="android:textAppearance">?android:textAppearanceSmall</item>
+    <item name="android:textColor">@color/white</item>
   </style>
 
   <style name="ProgressDialog" parent="Theme.AppCompat.Dialog">
@@ -37,7 +37,7 @@
     <item name="android:backgroundDimEnabled">true</item>
     <item name="android:textColor">@color/icons</item>
     <item name="android:textStyle">normal</item>
-    <item name="android:textSize">12sp</item>
+    <item name="android:textAppearance">?android:textAppearanceSmall</item>
   </style>
 
   <style name="CustomAlertDialogStyle">
