--- a/app/src/main/res/layout/link_comments_link.xml
+++ b/app/src/main/res/layout/link_comments_link.xml
@@ -28,7 +28,7 @@
           android:textAlignment="viewStart"
           android:layout_gravity="start"
           android:fontFamily="sans-serif-light"
-          android:textAppearance="?android:textAppearanceLarge"
+          android:textAppearance="?android:textAppearanceMedium"
           android:textColor="@color/primary_text"
           tools:text="The quick brown fox jumped over the white fence"
           tools:ignore="UnusedAttribute"/>
