--- a/app/src/main/res/layout/link_comments_stub.xml
+++ b/app/src/main/res/layout/link_comments_stub.xml
@@ -2,26 +2,38 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/comment_item_row"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/thread_comment_bg">
+    android:layout_height="wrap_content">
 
   <View
-      android:id="@+id/indentation"
-      android:background="@color/primary"
-      android:layout_width="@dimen/comment_indentation_margin"
-      android:layout_height="match_parent" />
+      android:layout_width="match_parent"
+      android:layout_height="1dp"
+      android:background="@color/primary"/>
 
-  <TextView
-      android:id="@+id/comment_more"
-      android:layout_width="fill_parent"
-      android:layout_height="@dimen/comment_data_height"
-      android:gravity="center|center"
-      android:textColor="@color/secondary_text"
-      android:textSize="@dimen/comment_more_text_size"
-      android:maxLines="1"
-      tools:text="view 10 more comments"/>
+  <LinearLayout
+      android:id="@+id/comment_item_row"
+      android:orientation="horizontal"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="@color/white">
+
+    <View
+        android:id="@+id/indentation"
+        android:background="@color/primary"
+        android:layout_width="@dimen/comment_indentation_margin"
+        android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/comment_more"
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/comment_data_height"
+        android:gravity="center|center"
+        android:textColor="@color/secondary_text"
+        android:textSize="@dimen/comment_more_text_size"
+        android:maxLines="1"
+        tools:text="view 10 more comments"/>
+
+  </LinearLayout>
 
 </LinearLayout>
